--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Limericks, Juvenile'
 - !lcsh 'Children''s poetry, English'
+- GITenberg
 title: A Book of Nonsense
 url: http://www.gutenberg.org/ebooks/13646
